# turret_python_interface

./: README.md  pyproject.toml
tests/: test_hardware.py  test_request_packet.py  test_telemetry_packet.py
turret_python_interface/: __init__.py  crc_definition.py  interface.py  message_base.py  mock_interface.py  request.py  requestpacket.py  telemetry_packet.py
turret_python_interface/datamodel/: message_base.py  request_packet.py  telemetry_packet.py
